# rnmrfit

./: .gitignore  Cargo.toml  DESCRIPTION  NAMESPACE  README.md  build.rs
R/: NMRData.R  NMRData1D.R  NMRData2D.R  NMRFit1D.R  NMRFit2D.R  NMRMixture1D.R  NMRMixture2D.R  NMRResonance1D.R  NMRResonance2D.R  NMRScaffold.R  NMRScaffold1D.R  NMRScaffold2D.R  NMRSpecies1D.R  NMRSpecies2D.R  RcppExports.R  cmplxn.R  options.R
examples/13C/: 13Cdata.csv  optimized.yaml
examples/2H/: 2Hdata.csv  fit_all.bat  optimized.yaml  simple.yaml
man/: NMRData2D.Rd  NMRFit1D-class.Rd  NMRFit2D-class.Rd  NMRMixture1D-class.Rd  NMRMixture2D-class.Rd  NMRResonance1D-class.Rd  NMRResonance2D-class.Rd  NMRScaffold-class.Rd  NMRScaffold1D-class.Rd  NMRScaffold2D-class.Rd  NMRSpecies2D-class.Rd  acqus-set.Rd  acqus.Rd  add_baseline.Rd  add_phase.Rd  apply_phase.Rd  areas.Rd  baseline-set.Rd  baseline.Rd  bounds-set.Rd  bounds.Rd  check_conformity.Rd  combine_all.Rd  combine_childrens.Rd  combine_dimensions.Rd  combine_getter.Rd  components.Rd  couplings-set.Rd  couplings.Rd  direct-set.Rd  direct.Rd  domain.Rd  f_baseline.Rd  f_lineshape.Rd  filter_direct.Rd  fit.Rd  fit.env.Rd  get_parameter.Rd  id-set.Rd  id.Rd  (+71 more)
src/: Makevars  Makevars.win  RcppExports.cpp  fit.cpp  lib.rs  lineshape.cpp  rnmrfit.h  wrapper.c
src/faddeeva/: Cargo.toml  build.rs  mod.rs
src/faddeeva/src/: lib.rs
src/fitting/: baseline.rs  common.rs  constraint.rs  fit.rs  lineshape.rs  mod.rs  peak.rs  phase.rs
src/importing/: bruker.rs  csv.rs  mod.rs  rs2d.rs
src/processing/: area.rs  baseline.rs  constraints.rs  data.rs  experiment.rs  fit.rs  job.rs  mod.rs  parameters.rs  peaks.rs  phase.rs  plot.rs  resonance.rs  species.rs
src/rnmrfit/: Cargo.toml  api.h
src/rnmrfit/src/: baseline.rs  constraint.rs  fit.rs  lib.rs  peak.rs
src/rnmrfit/tests/: fit.rs
src/rustnmrfit/: Cargo.toml
src/rustnmrfit/src/: baseline.rs  common.rs  constraint.rs  fit.rs  lib.rs  lineshape.rs  peak.rs  phase.rs  testing.rs
src/rustnmrfit/tests/: fit.rs
src/rustnmrfit/tests/data/: baseline_fit.json  combined_data.json  combined_fit.json  lorentz_data.json  lorentz_fit.json  phase_fit.json  test_data.R  voigt_data.json  voigt_fit.json
src/wrapper/: Cargo.toml  api.h
test/: glucose.csv  glutamate.csv  glutamate_peaks.csv  temp.R  test.R  test0.R  test1.R  test2.R  voigt_check.R
tests/: fit.rs  testthat.R
tests/testthat/: helper_all.R  helper_bounds.R  test_1d.R  (+6 more)
(+774 files in other folders)
