[package]
name = "faddeeva"
version = "0.1.0"
authors = ["Stanislav Sokolenko <stanislav@sokolenko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
num = "0.2"

[build-dependencies]
cc = "1.0"
