[package]
name = "rustnmrfit"
version = "0.1.0"
authors = ["Stanislav Sokolenko <stanislav@sokolenko.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
faddeeva = {path = "../faddeeva", version = "0.1.0"}
nlopt = "0.5.1"
num = "0.2"
num-integer = "0.1.42"
ndarray = "0.13.0"

[dev-dependencies]
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"

